--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,12 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-
     id 'kotlin-kapt'
+    id 'kotlin-android-extensions'
+
     id 'androidx.navigation.safeargs.kotlin'
     id 'dagger.hilt.android.plugin'
+
 
 }
 
@@ -20,6 +22,12 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     buildTypes {
@@ -73,6 +81,7 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation 'com.facebook.stetho:stetho:1.5.1'
 
+    implementation "io.coil-kt:coil:1.0.0"
 
     // Room components
     implementation "androidx.room:room-runtime:2.2.5"
