--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ricky">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:name=".Ricky"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ricky">
-        <activity android:name=".ui.activity.Character"></activity>
-        <activity android:name=".ui.activity.Auth" />
-        <activity android:name=".MainActivity">
+
+<!--        <activity android:name=".ui.activity.Character"/>-->
+        <activity android:name=".ui.activity.Character">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
